<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Skript</string>
    <string name="splash_screen">Splash</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button">Update</string>
    <string name="textView">Sender</string>
    <string name="textView2">Message</string>
    <string name="textView3">Date</string>
    <string name="avatar">Avatar</string>
    <string name="title_activity_display_message">DisplayMessage</string>
    <string name="clipboard">Copy to Clipboard</string>
    <string name="screen_shot">Capture image of the current view</string>
    <string name="mPesa">MPESA</string>
    <string name="in">IN</string>
    <string name="out">OUT</string>
    <string name="balance">BALANCE</string>
    <string name="details">DETAILS</string>
    <string name="search">Search</string>

</resources>
