<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/tableRow"
        android:dividerPadding="1dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:padding="@dimen/abc_action_bar_default_padding_material"
            android:textColor="#ffffffff"
            android:background="#ff000000"
            android:layout_column="0"
            android:text="@string/details"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:layout_weight="3"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            android:padding="@dimen/abc_action_bar_default_padding_material"
            android:layout_column="1"
            android:textColor="#ffffffff"
            android:background="#ff000000"
            android:text="@string/in"
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:layout_marginBottom="1dp" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView19"
            android:padding="@dimen/abc_action_bar_default_padding_material"
            android:layout_column="2"
            android:textColor="#ffffffff"
            android:background="#ff000000"
            android:text="@string/out"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="4"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView20"
            android:padding="@dimen/abc_action_bar_default_padding_material"
            android:layout_column="3"
            android:textColor="#ffffffff"
            android:background="#ff000000"
            android:layout_marginTop="1dp"
            android:text="@string/balance"
            android:layout_weight="2"
            android:layout_marginRight="1dp"
            android:gravity="center_horizontal" />
    </TableRow>
</TableLayout>