<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:background="#ffe8e8e8">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/imageView2"
        android:src="@drawable/avi"
        android:contentDescription="@string/avatar"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp" />

    <ListView
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:id="@+id/smsList"
    android:layout_gravity="center_vertical"
        android:scrollbars="vertical"
        android:smoothScrollbar="true"
        android:scrollingCache="true"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp" />

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView2"
        android:layout_toRightOf="@+id/imageView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="#ff151515"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/textView3"
        android:id="@+id/textView3"
            android:maxLength="11"
        android:maxLines="1"
            android:textColor="#ffcdcdcd"
            android:layout_gravity="right"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="1dp" />

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textView"
        android:id="@+id/textView"
            android:textColor="#ffffffff"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="1dp" />

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView2"
        android:id="@+id/textView2"
        android:layout_gravity="center_vertical"
            android:ellipsize="end"
            android:textColor="#ffcdcdcd"
            android:lines="1"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="1dp" />

    </RelativeLayout>


</RelativeLayout>
